# pca-eval

./: .gitignore  LICENSE  NOTICE.md  PRODUCT.md  README.md  pyproject.toml
benchmarks/: __init__.py  ais.py  attribution_bench.py  base.py  cache.py  download.py  factscore.py  fever.py  hagrid.py  nli.py  qasper.py  run.py  run_stats.py  scifact.py  stats.py
docs/: BENCHMARKING_GUIDE.md  CLAIM_DECOMPOSITION_EVALUATION_DESIGN.md  DECOMPOSITION_EVALUATION_README.md  DECOMPOSITION_EVAL_IMPLEMENTATION_CHECKLIST.md  DECOMPOSITION_EVAL_ONEPAGER.md  DECOMPOSITION_METRICS_SPEC.md  RESULTS.md  RETRIEVAL_EVALUATION_DESIGN.md  RETRIEVAL_EVAL_INDEX.md  RETRIEVAL_EVAL_QUICK_START.md  RETRIEVAL_EVAL_SUMMARY.txt  RETRIEVAL_IMPLEMENTATION_STARTER.py
eval/: __init__.py  run_benchmarks.py
human_eval/: EXPERT_RECRUITMENT.md  LAUNCH_CHECKLIST.md  LAUNCH_DAY_QUICK_REF.md  PROLIFIC_README.md  README.md  analyze_human_eval.py  annotation_interface.html  extract_proof_objects.py  prolific_task_template.json
results/: attribution_bench_rerun.txt  facts_grounding_full_results.txt  factscore_rerun.txt  fever_rerun.txt  hagrid_rerun.txt  qasper_rerun.txt  scifact_rerun.txt
tests/: test_ais.py  test_base.py  test_benchmark_suites.py  test_cache.py  test_download.py  test_fever.py  test_hagrid.py  test_nli.py  test_qasper.py  test_scifact.py  test_stats.py
