[project]
name = "pca-eval"
version = "0.1.0"
description = "Benchmark evaluation scripts for Proof-Carrying Answers (PCAs)"
requires-python = ">=3.12"
license = "Apache-2.0"
readme = "README.md"
authors = [{name = "Connor Frank"}]
keywords = ["benchmark", "nli", "fact-verification", "attribution"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "sentence-transformers>=2.2",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "requests>=2.28",
    "scipy>=1.11",
]

[project.urls]
repository = "https://github.com/conjfrnk/pca-eval"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
xgboost = [
    "xgboost>=2.0",
    "joblib>=1.3",
]
factscore = ["gdown>=4.5"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["benchmarks"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "UP017"]

[tool.ruff.lint.isort]
known-first-party = ["benchmarks"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
